# aitask-skill

./: .gitignore  Dockerfile  GITHUB_MARKETPLACE.md  HTMX 前端使用指南.md  INITIALIZATION.md  PUBLISHING.md  README.md  RELEASE_v0.1.0.md  SKILL.md  STANDARDIZATION_SUMMARY.md  action.yml  ceshi.md  pyproject.toml  setup.py  skill-package.yaml  skill.json
.github/workflows/: release.yml
backend/: .env.example  requirements.txt  start.py  test_api.py  test_frontend.py
backend/app/api/: __init__.py  projects.py  reports.py  tasks.py
backend/app/db/: __init__.py
backend/app/models/: models.py
backend/app/schemas/: project.py
backend/app/skills/: __init__.py  task_skill.py
backend/static/: README.md
backend/templates/: base.html  index.html  project_create.html  project_list.html  projects.html  task_create.html  task_list.html  tasks.html
go-skill/: README.md  go.mod  main.go  test_create.json  utils.go
skills/task-management/: SKILL.md  build.sh  claude.json  db.go  go.sum  main.go  main_test.go  server.go  utils.go
src/: main.py
src/core/: config.py
src/db/: database.py
src/models/: __init__.py
src/schemas/: __init__.py  attachment.py  comment.py  task.py
src/utils/: __init__.py
task-management/: SKILL.md  build.sh  claude.json  db.go  go.mod  init.sh  main.go  quick-init.sh  server.go  skill.config.json  start.sh  task-skill.sha256  utils.go
task-management/templates/: base.html  index.html  task_detail.html  tasks.html
task_skill/: SKILL.md  __init__.py  cli.py
task_skill/templates/: base.html  index.html  task_detail.html  tasks.html
(+11 files in other folders)
