[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "task-skill"
version = "1.1.4"
description = "零依赖、高性能的任务管理技能 - Task Management Skill"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "xfwgithub"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Go",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
keywords = ["task", "management", "cli", "agent", "ai", "skill"]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/xfwgithub/aitask-skill"
"Bug Reports" = "https://github.com/xfwgithub/aitask-skill/issues"
Source = "https://github.com/xfwgithub/aitask-skill"

[project.scripts]
task-skill = "task_skill.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["task_skill*"]

[tool.setuptools.package-data]
task_skill = ["*.md", "*.go", "*.mod", "*.sum", "build.sh", "start.sh"]
